force-app/main/default/objects/LLC_BI__External_Data_Source__c/LLC_BI__External_Data_Source__c.object-meta.xml
<CustomObject>
    <description>This object connects a matrix to an external data source, which allows a result column to automatically retrieve its values from an external data set.</description>
    <label>External Data Source</label>
    <nameField>
        <displayFormat>EDS-{00000}</displayFormat>
        <label>External Data Source Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Data Sources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>