force-app/main/default/objects/LLC_BI__External_Data_Source__c/fields/LLC_BI__Data_Source__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Data_Source__c</fullName>
    <description>Users populate this required text field to indicate the source of data for the selected data category. By default, it is blank.</description>
    <label>Data Source</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>