force-app/main/default/objects/LLC_BI__External_Data_Source__c/fields/LLC_BI__Matrix__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Matrix__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The system populates this required lookup field to associate this record to a parent matrix. By default, it is blank.</description>
    <label>Matrix</label>
    <referenceTo>LLC_BI__Matrix__c</referenceTo>
    <relationshipLabel>External Data Sources</relationshipLabel>
    <relationshipName>External_Data_Sources</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>